hw3/src/main/java/com/compilers/hw3/irParser.java
/* Generated By:JavaCC: Do not edit this line. irParser.java */
package com.compilers.hw3; // TODO: remove
import java.util.*;
import java.io.*;

public class irParser implements irParserConstants {

// Program -> {Data} {Func}
//
  final public IR.Program Program() throws ParseException {
  List<IR.Data> data = new ArrayList<IR.Data>(); IR.Data d;
  List<IR.Func> funcs = new ArrayList<IR.Func>(); IR.Func f;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwData:
      case 24:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwData:
        d = Data();
               data.add(d);
        break;
      case 24:
        jj_consume_token(24);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Global:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      f = Func();
               funcs.add(f);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 24:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        jj_consume_token(24);
      }
    }
    jj_consume_token(0);
    {if (true) return new IR.Program(data,funcs);}
    throw new Error("Missing return statement in function");
  }

// Data -> "data" Global "(" "sz=" IntLit ")" ":" [Const {"," Const}] <EOL>
//
  final public IR.Data Data() throws ParseException {
  List<IR.Const> items = new ArrayList<IR.Const>();
  IR.Global name; IR.IntLit size; IR.Const c;
    jj_consume_token(kwData);
    name = Global();
    jj_consume_token(25);
    jj_consume_token(kwSize);
    size = IntLit();
    jj_consume_token(26);
    jj_consume_token(27);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IntLit:
    case Global:
      c = Const();
                  items.add(c);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 28:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(28);
        c = Const();
                                                    items.add(c);
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(24);
    {if (true) return new IR.Data(name,size.i,items);}
    throw new Error("Missing return statement in function");
  }

// Const -> Global | IntLit
// 
  final public IR.Const Const() throws ParseException {
  IR.Const c;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Global:
      c = Global();
      break;
    case IntLit:
      c = IntLit();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

// Func -> Global VarList <EOL>          // Tgt Params
//         [VarList <EOL>]               // Locals
//         "{" {Inst | <EOL>} "}" <EOL>  // Body
//
  final public IR.Func Func() throws ParseException {
  IR.Type type=null;
  IR.Global g;
  IR.Inst inst;
  List<String> params;
  List<String> locals = new ArrayList<String>();
  List<IR.Inst> code = new ArrayList<IR.Inst>();
    g = Global();
    params = VarList();
    jj_consume_token(24);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
      locals = VarList();
      jj_consume_token(24);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(29);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwCall:
      case kwGoto:
      case kwIf:
      case kwReturn:
      case IntLit:
      case Temp:
      case Id:
      case 24:
      case 45:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwCall:
      case kwGoto:
      case kwIf:
      case kwReturn:
      case IntLit:
      case Temp:
      case Id:
      case 45:
        inst = Inst();
                        code.add(inst);
        break;
      case 24:
        jj_consume_token(24);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(30);
    {if (true) return new IR.Func(g.name,params,locals,code);}
    throw new Error("Missing return statement in function");
  }

  final public IR.Type Type() throws ParseException {
  Token t; IR.Type type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IntType:
      t = jj_consume_token(IntType);
                    type = IR.Type.INT;
      break;
    case BoolType:
      t = jj_consume_token(BoolType);
                    type = IR.Type.BOOL;
      break;
    case PtrType:
      t = jj_consume_token(PtrType);
                    type = IR.Type.PTR;
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

// VarList -> "(" [<Id> T{"," <Id>}] ")"
//
  final public List<String> VarList() throws ParseException {
  Token t;
  IR.Type type=null;
  List<String> vars = new ArrayList<String>();
    jj_consume_token(25);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      t = jj_consume_token(Id);
                 vars.add(t.image);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 28:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_6;
        }
        jj_consume_token(28);
        t = jj_consume_token(Id);
                     vars.add(t.image);
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(26);
    {if (true) return vars;}
    throw new Error("Missing return statement in function");
  }

// Inst -> ( Dest "=" Src BOP Src              	     // Binop
//         | Dest "=" UOP Src                        // Unop
//         | Dest "=" Src                            // Move
//         | Dest "=" Addr Type                      // Load
//         | Addr Type "=" Src                       // Store
//         | [Dest "="] "call" ["*"] CallTgt ArgList // Call
//         | "return" [Src]                          // Return [val]
//         | "if" Src ROP Src "goto" Label     	     // CJump
//         | "goto" Label                            // Jump
//         | Label ":"                               // LabelDec
//         ) <EOL>
//
  final public IR.Inst Inst() throws ParseException {
  IR.Label lab;
  IR.Type type=null;
  IR.BOP bop=null;
  IR.RelOP rop=null;
  IR.UOP uop;
  IR.Inst inst=null;
  IR.Addr addr;
  IR.Dest dst, loc=null;
  IR.Temp tmp=null;
  IR.Src src=null, src2=null;
  IR.CallTgt c=null;
  List<IR.Src> args;
  boolean ind=false;
  int offset=0;
    if (jj_2_2(2)) {
      dst = Dest();
      jj_consume_token(31);
      if (jj_2_1(2)) {
        addr = Addr();
        type = Type();
                     inst = new IR.Load(type,dst,addr);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IntLit:
        case BoolLit:
        case StrLit:
        case Temp:
        case Id:
        case Global:
          src = Src();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 32:
          case 33:
          case 34:
          case 35:
          case 36:
          case 37:
          case 38:
          case 39:
          case 40:
          case 41:
          case 42:
          case 43:
            bop = BOP();
            src2 = Src();
                       inst = new IR.Binop(bop,dst,src,src2);
            break;
          default:
            jj_la1[13] = jj_gen;
            ;
          }
                     if (inst==null) inst = new IR.Move(dst,src);
          break;
        case 34:
        case 44:
          uop = UOP();
          src = Src();
                     inst = new IR.Unop(uop,dst,src);
          break;
        case kwCall:
          jj_consume_token(kwCall);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 32:
            jj_consume_token(32);
                    ind = true;
            break;
          default:
            jj_la1[14] = jj_gen;
            ;
          }
          c = CallTgt();
          args = ArgList();
                     inst = new IR.Call(c,ind,args,dst);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IntLit:
      case 45:
        addr = Addr();
        type = Type();
        jj_consume_token(31);
        src = Src();
                     inst = new IR.Store(type,addr,src);
        break;
      case kwCall:
        jj_consume_token(kwCall);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 32:
          jj_consume_token(32);
                  ind = true;
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        c = CallTgt();
        args = ArgList();
                     inst = new IR.Call(c,ind,args);
        break;
      case kwReturn:
        jj_consume_token(kwReturn);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IntLit:
        case BoolLit:
        case StrLit:
        case Temp:
        case Id:
        case Global:
          src = Src();
          break;
        default:
          jj_la1[17] = jj_gen;
          ;
        }
                             inst = new IR.Return(src);
        break;
      case kwIf:
        jj_consume_token(kwIf);
        src = Src();
        rop = RelOP();
        src2 = Src();
        jj_consume_token(kwGoto);
        lab = Label();
                     inst = new IR.CJump(rop,src,src2,lab);
        break;
      case kwGoto:
        jj_consume_token(kwGoto);
        lab = Label();
                         inst = new IR.Jump(lab);
        break;
      case Id:
        lab = Label();
        jj_consume_token(27);
                         inst = new IR.LabelDec(lab.name);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(24);
    {if (true) return inst;}
    throw new Error("Missing return statement in function");
  }

// ArgList -> "(" [Src {"," Src}] ")"
//
  final public List<IR.Src> ArgList() throws ParseException {
  List<IR.Src> args = new ArrayList<IR.Src>();
  IR.Src arg;
    jj_consume_token(25);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IntLit:
    case BoolLit:
    case StrLit:
    case Temp:
    case Id:
    case Global:
      arg = Src();
                    args.add(arg);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 28:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_7;
        }
        jj_consume_token(28);
        arg = Src();
                          args.add(arg);
      }
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    jj_consume_token(26);
    {if (true) return args;}
    throw new Error("Missing return statement in function");
  }

  final public IR.ArithOP ArithOP() throws ParseException {
  IR.ArithOP op=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 33:
      jj_consume_token(33);
           op = IR.ArithOP.ADD;
      break;
    case 34:
      jj_consume_token(34);
                                           op = IR.ArithOP.SUB;
      break;
    case 32:
      jj_consume_token(32);
           op = IR.ArithOP.MUL;
      break;
    case 35:
      jj_consume_token(35);
                                           op = IR.ArithOP.DIV;
      break;
    case 36:
      jj_consume_token(36);
           op = IR.ArithOP.AND;
      break;
    case 37:
      jj_consume_token(37);
                                           op = IR.ArithOP.OR;
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return op;}
    throw new Error("Missing return statement in function");
  }

  final public IR.RelOP RelOP() throws ParseException {
  IR.RelOP op=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      jj_consume_token(38);
           op = IR.RelOP.EQ;
      break;
    case 39:
      jj_consume_token(39);
                                         op = IR.RelOP.NE;
      break;
    case 40:
      jj_consume_token(40);
           op = IR.RelOP.LT;
      break;
    case 41:
      jj_consume_token(41);
                                         op = IR.RelOP.LE;
      break;
    case 42:
      jj_consume_token(42);
           op = IR.RelOP.GT;
      break;
    case 43:
      jj_consume_token(43);
                                         op = IR.RelOP.GE;
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return op;}
    throw new Error("Missing return statement in function");
  }

  final public IR.BOP BOP() throws ParseException {
  IR.BOP op;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
    case 33:
    case 34:
    case 35:
    case 36:
    case 37:
      op = ArithOP();
      break;
    case 38:
    case 39:
    case 40:
    case 41:
    case 42:
    case 43:
      op = RelOP();
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return op;}
    throw new Error("Missing return statement in function");
  }

  final public IR.UOP UOP() throws ParseException {
  IR.UOP op=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
           op = IR.UOP.NEG;
      break;
    case 44:
      jj_consume_token(44);
                                       op = IR.UOP.NOT;
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return op;}
    throw new Error("Missing return statement in function");
  }

  final public IR.Label Label() throws ParseException {
  Token t;
    t = jj_consume_token(Id);
    {if (true) return new IR.Label(t.image);}
    throw new Error("Missing return statement in function");
  }

// Addr -> [IntLit] "[" Dest "]"
//
  final public IR.Addr Addr() throws ParseException {
  IR.IntLit v; int offset=0; IR.Src src;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IntLit:
      v = IntLit();
                 offset = v.i;
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
    jj_consume_token(45);
    src = Src();
    jj_consume_token(46);
    {if (true) return new IR.Addr(src, offset);}
    throw new Error("Missing return statement in function");
  }

// Src -> Id | Temp | Global | IntLit | BoolLit | StrLit 
//
  final public IR.Src Src() throws ParseException {
  IR.Src src;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      src = Id();
      break;
    case Temp:
      src = Temp();
      break;
    case Global:
      src = Global();
      break;
    case IntLit:
      src = IntLit();
      break;
    case BoolLit:
      src = BoolLit();
      break;
    case StrLit:
      src = StrLit();
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return src;}
    throw new Error("Missing return statement in function");
  }

// Dest -> Id | Temp  
//
  final public IR.Dest Dest() throws ParseException {
  IR.Dest dst;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      dst = Id();
      break;
    case Temp:
      dst = Temp();
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return dst;}
    throw new Error("Missing return statement in function");
  }

// CallTgt -> Id | Temp | Global 
//
  final public IR.CallTgt CallTgt() throws ParseException {
  IR.CallTgt tgt;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      tgt = Id();
      break;
    case Temp:
      tgt = Temp();
      break;
    case Global:
      tgt = Global();
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return tgt;}
    throw new Error("Missing return statement in function");
  }

  final public IR.Id Id() throws ParseException {
  Token t;
    t = jj_consume_token(Id);
    {if (true) return new IR.Id(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public IR.Temp Temp() throws ParseException {
  Token t; String s;
    t = jj_consume_token(Temp);
    s = t.image.substring(1,t.image.length());
    {if (true) return new IR.Temp(Integer.parseInt(s));}
    throw new Error("Missing return statement in function");
  }

  final public IR.Global Global() throws ParseException {
  Token t;
    t = jj_consume_token(Global);
    {if (true) return new IR.Global(t.image.substring(1,t.image.length()));}
    throw new Error("Missing return statement in function");
  }

  final public IR.IntLit IntLit() throws ParseException {
  Token t;
    t = jj_consume_token(IntLit);
    {if (true) return new IR.IntLit(Integer.parseInt(t.image));}
    throw new Error("Missing return statement in function");
  }

  final public IR.BoolLit BoolLit() throws ParseException {
  Token t;
    t = jj_consume_token(BoolLit);
    {if (true) return new IR.BoolLit(Boolean.parseBoolean(t.image));}
    throw new Error("Missing return statement in function");
  }

  final public IR.StrLit StrLit() throws ParseException {
  Token t;
    t = jj_consume_token(StrLit);
    {if (true) return new IR.StrLit(t.image.substring(1,t.image.length()-1));}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_3R_20() {
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3R_22() {
    if (jj_scan_token(Temp)) return true;
    return false;
  }

  private boolean jj_3R_17() {
    if (jj_3R_23()) return true;
    return false;
  }

  private boolean jj_3R_21() {
    if (jj_scan_token(Id)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_3R_22()) return true;
    return false;
  }

  private boolean jj_3R_19() {
    if (jj_3R_24()) return true;
    return false;
  }

  private boolean jj_3R_25() {
    if (jj_scan_token(StrLit)) return true;
    return false;
  }

  private boolean jj_3R_16() {
    if (jj_3R_22()) return true;
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) return true;
    }
    return false;
  }

  private boolean jj_3R_24() {
    if (jj_scan_token(BoolLit)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3R_18() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_scan_token(IntLit)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_9()) return true;
    if (jj_scan_token(31)) return true;
    return false;
  }

  private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_23() {
    if (jj_scan_token(Global)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_10()) jj_scanpos = xsp;
    if (jj_scan_token(45)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public irParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[29];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1000080,0x1000080,0x800000,0x1000000,0x10000000,0x808000,0x808000,0x2000000,0x1608f00,0x1608f00,0x1c0000,0x10000000,0x400000,0x0,0x0,0xe38100,0x0,0xe38000,0x408f00,0x10000000,0xe38000,0x0,0x0,0x0,0x0,0x8000,0xe38000,0x600000,0xe00000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x2000,0x2000,0x0,0x0,0x0,0xfff,0x1,0x1004,0x1,0x0,0x2000,0x0,0x0,0x3f,0xfc0,0xfff,0x1004,0x0,0x0,0x0,0x0,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[2];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public irParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public irParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new irParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 29; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 29; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public irParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new irParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 29; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 29; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
